--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# "compiled" block.properties & item.properties files
+*.properties
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
